# BitShield

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
apps/bitshield/: main.cpp
include/bitshield/: bitstream.hpp  channel.hpp  io.hpp  metrics.hpp
include/bitshield/codecs/: hamming74.hpp  repetition.hpp
src/: bitstream.cpp  channel.cpp  io.cpp  metrics.cpp
src/codecs/: hamming74.cpp  repetition.cpp
tests/: test_channel.cpp  test_hamming74.cpp  test_repetition.cpp
